--- a/public/index.html
+++ b/public/index.html
@@ -45,23 +45,23 @@
     </div>
 
     <nav class="bottom-nav">
-      <button type="button" class="nav-item">
+      <button type="button" class="nav-item" data-nav="agent">
         <span class="icon icon-agent"></span>
         Đại Lý
       </button>
-      <button type="button" class="nav-item">
+      <button type="button" class="nav-item" data-nav="rank">
         <span class="icon icon-rank"></span>
         Xếp Hạng
       </button>
-      <button type="button" class="nav-item active">
+      <button type="button" class="nav-item active" data-nav="home">
         <span class="icon icon-home"></span>
         Home
       </button>
-      <button type="button" class="nav-item">
+      <button type="button" class="nav-item" data-nav="store">
         <span class="icon icon-store"></span>
         Cửa hàng
       </button>
-      <button type="button" class="nav-item">
+      <button type="button" class="nav-item" data-nav="task">
         <span class="icon icon-task"></span>
         Nhiệm vụ
       </button>
