--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,104 @@
             </svg>
           </button>
         </div>
-        <button class="menu-btn" type="button" aria-label="Menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
+        <div class="menu-wrap">
+          <button
+            class="menu-btn"
+            type="button"
+            aria-label="Menu"
+            aria-haspopup="true"
+            aria-expanded="false"
+            aria-controls="menuPanel"
+          >
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="menu-panel" id="menuPanel" aria-hidden="true">
+            <div class="menu-card" role="menu" aria-label="Menu nhanh">
+              <button class="menu-item" type="button" role="menuitem" data-action="checkin">
+                <span class="menu-icon">
+                  <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <rect x="3" y="5" width="18" height="16" rx="2" />
+                    <line x1="8" y1="3" x2="8" y2="7" />
+                    <line x1="16" y1="3" x2="16" y2="7" />
+                    <path d="M7 13l2 2 4-4" />
+                  </svg>
+                </span>
+                <span class="menu-text">Điểm Danh</span>
+              </button>
+              <div class="menu-group open">
+                <button
+                  class="menu-item has-arrow menu-toggle"
+                  type="button"
+                  role="menuitem"
+                  aria-expanded="true"
+                >
+                  <span class="menu-icon">
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                      <path
+                        d="M12 3l2.8 5.7 6.2.9-4.5 4.3 1.1 6.1L12 17l-5.6 3 1.1-6.1L3 9.6l6.2-.9L12 3z"
+                      />
+                    </svg>
+                  </span>
+                  <span class="menu-text">Hoạt động</span>
+                  <span class="menu-arrow" aria-hidden="true">˅</span>
+                </button>
+                <div class="menu-sub" role="group" aria-label="Danh sách hoạt động">
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Online nhận quà
+                  </button>
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Đánh boss
+                  </button>
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Thí luyện tông môn
+                  </button>
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Tỷ thí
+                  </button>
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Đổ Thạch
+                  </button>
+                  <button class="menu-sub-item" type="button">
+                    <span class="menu-sub-dot" aria-hidden="true"></span>
+                    Vòng quay vận mệnh
+                  </button>
+                </div>
+              </div>
+              <button class="menu-item" type="button" role="menuitem">
+                <span class="menu-icon">
+                  <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <circle cx="9" cy="8" r="3" />
+                    <circle cx="17" cy="9" r="2.5" />
+                    <path d="M3.5 19c.8-3 3.2-4.5 5.5-4.5s4.7 1.5 5.5 4.5" />
+                    <path d="M14.5 19c.4-1.7 1.6-2.9 3.5-3 1.4.1 2.5.8 3 2" />
+                  </svg>
+                </span>
+                <span class="menu-text">Mã mời</span>
+              </button>
+              <button class="menu-item" type="button" role="menuitem">
+                <span class="menu-icon">
+                  <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path
+                      d="M6 5h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H9l-5 4v-4H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"
+                    />
+                  </svg>
+                </span>
+                <span class="menu-text">Phòng Chat</span>
+              </button>
+            </div>
+          </div>
+        </div>
       </header>
 
       <section class="banner">
-        <img src="/banner.png" alt="Banner" />
+        <img src="/banner.jpg" alt="Banner" />
       </section>
 
     <nav class="tabs">
@@ -38,6 +127,64 @@
       <button class="tab" type="button" data-tab="trade">Thương Mại</button>
       <button class="tab" type="button" data-tab="rank">Bảng Xếp Hạng</button>
     </nav>
+
+      <section class="checkin-view" id="checkinView" aria-hidden="true">
+        <div class="checkin-card">
+          <div class="checkin-head">
+            <div class="checkin-title">
+              <span>Điểm Danh Tháng</span>
+              <button
+                class="checkin-month-btn"
+                type="button"
+                aria-expanded="false"
+                aria-controls="checkinPicker"
+              >
+                <span id="checkinMonth">02/2026</span>
+                <span class="checkin-caret" aria-hidden="true">▾</span>
+              </button>
+            </div>
+            <div class="checkin-nav">
+              <button
+                class="checkin-nav-btn"
+                type="button"
+                data-checkin-nav="-1"
+                aria-label="Tháng trước"
+              >
+                ‹
+              </button>
+              <button
+                class="checkin-nav-btn"
+                type="button"
+                data-checkin-nav="1"
+                aria-label="Tháng sau"
+              >
+                ›
+              </button>
+              <button class="checkin-close" type="button" aria-label="Đóng">×</button>
+            </div>
+          </div>
+          <div class="checkin-picker" id="checkinPicker" aria-hidden="true">
+            <div class="checkin-picker-grid" id="checkinPickerGrid"></div>
+          </div>
+          <div class="checkin-weekdays">
+            <span>T2</span>
+            <span>T3</span>
+            <span>T4</span>
+            <span>T5</span>
+            <span>T6</span>
+            <span>T7</span>
+            <span>CN</span>
+          </div>
+          <div class="checkin-grid" id="checkinGrid"></div>
+          <div class="checkin-note">
+            Bạn cần <strong>Đăng nhập</strong> để tham gia điểm danh.
+          </div>
+          <div class="checkin-foot">
+            <span class="checkin-foot-icon">i</span>
+            Điểm tích lũy (số ngày điểm danh) sẽ làm mới khi sang tháng mới.
+          </div>
+        </div>
+      </section>
 
       <section class="list" id="gameList">
         <div class="loading">Đang tải dữ liệu...</div>
