--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,67 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none" aria-hidden="true">
+      <symbol id="icon-search" viewBox="0 0 24 24">
+        <circle cx="11" cy="11" r="8" />
+        <line x1="21" y1="21" x2="16.65" y2="16.65" />
+      </symbol>
+      <symbol id="icon-calendar-check" viewBox="0 0 24 24">
+        <rect x="3" y="4" width="18" height="18" rx="2" />
+        <line x1="16" y1="2" x2="16" y2="6" />
+        <line x1="8" y1="2" x2="8" y2="6" />
+        <line x1="3" y1="10" x2="21" y2="10" />
+        <path d="M9 16l2 2 4-4" />
+      </symbol>
+      <symbol id="icon-star" viewBox="0 0 24 24">
+        <path
+          d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 22 12 18.56 5.82 22 7 14.14 2 9.27l6.91-1.01L12 2z"
+        />
+      </symbol>
+      <symbol id="icon-user" viewBox="0 0 24 24">
+        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
+        <circle cx="12" cy="7" r="4" />
+      </symbol>
+      <symbol id="icon-message-square" viewBox="0 0 24 24">
+        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" />
+      </symbol>
+      <symbol id="icon-home" viewBox="0 0 24 24">
+        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+        <polyline points="9 22 9 12 15 12 15 22" />
+      </symbol>
+      <symbol id="icon-shopping-cart" viewBox="0 0 24 24">
+        <circle cx="9" cy="21" r="1" />
+        <circle cx="20" cy="21" r="1" />
+        <path
+          d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"
+        />
+      </symbol>
+      <symbol id="icon-list-checks" viewBox="0 0 24 24">
+        <path d="M3 7l2 2 4-4" />
+        <path d="M3 17l2 2 4-4" />
+        <line x1="11" y1="7" x2="21" y2="7" />
+        <line x1="11" y1="17" x2="21" y2="17" />
+      </symbol>
+      <symbol id="icon-chevron-down" viewBox="0 0 24 24">
+        <polyline points="6 9 12 15 18 9" />
+      </symbol>
+      <symbol id="icon-chevron-left" viewBox="0 0 24 24">
+        <polyline points="15 18 9 12 15 6" />
+      </symbol>
+      <symbol id="icon-chevron-right" viewBox="0 0 24 24">
+        <polyline points="9 18 15 12 9 6" />
+      </symbol>
+      <symbol id="icon-x" viewBox="0 0 24 24">
+        <line x1="18" y1="6" x2="6" y2="18" />
+        <line x1="6" y1="6" x2="18" y2="18" />
+      </symbol>
+      <symbol id="icon-info" viewBox="0 0 24 24">
+        <circle cx="12" cy="12" r="10" />
+        <path d="M12 16v-4" />
+        <path d="M12 8h.01" />
+      </symbol>
+    </svg>
+
     <div class="page">
       <header class="topbar">
         <div class="brand">
@@ -15,9 +76,8 @@
         <div class="search">
           <input id="searchInput" type="text" placeholder="Nhập để tìm kiếm" />
           <button class="search-btn" type="button" aria-label="Tìm kiếm">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <circle cx="11" cy="11" r="7" />
-              <line x1="16.65" y1="16.65" x2="21" y2="21" />
+            <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+              <use href="#icon-search" />
             </svg>
           </button>
         </div>
@@ -38,11 +98,8 @@
             <div class="menu-card" role="menu" aria-label="Menu nhanh">
               <button class="menu-item" type="button" role="menuitem" data-action="checkin">
                 <span class="menu-icon">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <rect x="3" y="5" width="18" height="16" rx="2" />
-                    <line x1="8" y1="3" x2="8" y2="7" />
-                    <line x1="16" y1="3" x2="16" y2="7" />
-                    <path d="M7 13l2 2 4-4" />
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-calendar-check" />
                   </svg>
                 </span>
                 <span class="menu-text">Điểm Danh</span>
@@ -55,14 +112,16 @@
                   aria-expanded="true"
                 >
                   <span class="menu-icon">
-                    <svg viewBox="0 0 24 24" aria-hidden="true">
-                      <path
-                        d="M12 3l2.8 5.7 6.2.9-4.5 4.3 1.1 6.1L12 17l-5.6 3 1.1-6.1L3 9.6l6.2-.9L12 3z"
-                      />
+                    <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                      <use href="#icon-star" />
                     </svg>
                   </span>
                   <span class="menu-text">Hoạt động</span>
-                  <span class="menu-arrow" aria-hidden="true">˅</span>
+                  <span class="menu-arrow" aria-hidden="true">
+                    <svg class="lucide" viewBox="0 0 24 24">
+                      <use href="#icon-chevron-down" />
+                    </svg>
+                  </span>
                 </button>
                 <div class="menu-sub" role="group" aria-label="Danh sách hoạt động">
                   <button class="menu-sub-item" type="button">
@@ -93,21 +152,16 @@
               </div>
               <button class="menu-item" type="button" role="menuitem">
                 <span class="menu-icon">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <circle cx="9" cy="8" r="3" />
-                    <circle cx="17" cy="9" r="2.5" />
-                    <path d="M3.5 19c.8-3 3.2-4.5 5.5-4.5s4.7 1.5 5.5 4.5" />
-                    <path d="M14.5 19c.4-1.7 1.6-2.9 3.5-3 1.4.1 2.5.8 3 2" />
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-user" />
                   </svg>
                 </span>
                 <span class="menu-text">Mã mời</span>
               </button>
               <button class="menu-item" type="button" role="menuitem">
                 <span class="menu-icon">
-                  <svg viewBox="0 0 24 24" aria-hidden="true">
-                    <path
-                      d="M6 5h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H9l-5 4v-4H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z"
-                    />
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-message-square" />
                   </svg>
                 </span>
                 <span class="menu-text">Phòng Chat</span>
@@ -140,7 +194,11 @@
                 aria-controls="checkinPicker"
               >
                 <span id="checkinMonth">02/2026</span>
-                <span class="checkin-caret" aria-hidden="true">▾</span>
+                <span class="checkin-caret" aria-hidden="true">
+                  <svg class="lucide" viewBox="0 0 24 24">
+                    <use href="#icon-chevron-down" />
+                  </svg>
+                </span>
               </button>
             </div>
             <div class="checkin-nav">
@@ -150,7 +208,9 @@
                 data-checkin-nav="-1"
                 aria-label="Tháng trước"
               >
-                ‹
+                <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                  <use href="#icon-chevron-left" />
+                </svg>
               </button>
               <button
                 class="checkin-nav-btn"
@@ -158,9 +218,26 @@
                 data-checkin-nav="1"
                 aria-label="Tháng sau"
               >
-                ›
+                <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                  <use href="#icon-chevron-right" />
+                </svg>
               </button>
-              <button class="checkin-close" type="button" aria-label="Đóng">×</button>
+              <button
+                class="checkin-nav-btn checkin-home-btn"
+                type="button"
+                data-checkin-home
+                aria-label="Trang chủ"
+                title="Trang chủ"
+              >
+                <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                  <use href="#icon-home" />
+                </svg>
+              </button>
+              <button class="checkin-close" type="button" aria-label="Đóng">
+                <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                  <use href="#icon-x" />
+                </svg>
+              </button>
             </div>
           </div>
           <div class="checkin-picker" id="checkinPicker" aria-hidden="true">
@@ -180,7 +257,11 @@
             Bạn cần <strong>Đăng nhập</strong> để tham gia điểm danh.
           </div>
           <div class="checkin-foot">
-            <span class="checkin-foot-icon">i</span>
+            <span class="checkin-foot-icon" aria-hidden="true">
+              <svg class="lucide" viewBox="0 0 24 24">
+                <use href="#icon-info" />
+              </svg>
+            </span>
             Điểm tích lũy (số ngày điểm danh) sẽ làm mới khi sang tháng mới.
           </div>
         </div>
@@ -193,23 +274,43 @@
 
     <nav class="bottom-nav">
       <button type="button" class="nav-item" data-nav="agent">
-        <span class="icon icon-agent"></span>
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-user" />
+          </svg>
+        </span>
         Đại Lý
       </button>
       <button type="button" class="nav-item" data-nav="rank">
-        <span class="icon icon-rank"></span>
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-star" />
+          </svg>
+        </span>
         Xếp Hạng
       </button>
       <button type="button" class="nav-item active" data-nav="home">
-        <span class="icon icon-home"></span>
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-home" />
+          </svg>
+        </span>
         Home
       </button>
       <button type="button" class="nav-item" data-nav="store">
-        <span class="icon icon-store"></span>
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-shopping-cart" />
+          </svg>
+        </span>
         Cửa hàng
       </button>
       <button type="button" class="nav-item" data-nav="task">
-        <span class="icon icon-task"></span>
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-list-checks" />
+          </svg>
+        </span>
         Nhiệm vụ
       </button>
     </nav>
