--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,11 @@
         <path d="M12 16v-4" />
         <path d="M12 8h.01" />
       </symbol>
+      <symbol id="icon-menu" viewBox="0 0 24 24">
+        <line x1="4" y1="6" x2="20" y2="6" />
+        <line x1="4" y1="12" x2="20" y2="12" />
+        <line x1="4" y1="18" x2="20" y2="18" />
+      </symbol>
     </svg>
 
     <div class="page">
@@ -90,9 +95,9 @@
             aria-expanded="false"
             aria-controls="menuPanel"
           >
-            <span></span>
-            <span></span>
-            <span></span>
+            <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+              <use href="#icon-menu" />
+            </svg>
           </button>
           <div class="menu-panel" id="menuPanel" aria-hidden="true">
             <div class="menu-card" role="menu" aria-label="Menu nhanh">
@@ -175,12 +180,44 @@
         <img src="/banner.jpg" alt="Banner" />
       </section>
 
-    <nav class="tabs">
-      <button class="tab active" type="button" data-tab="home">Game Hot</button>
-      <button class="tab" type="button" data-tab="h5">Cổng game H5</button>
-      <button class="tab" type="button" data-tab="trade">Thương Mại</button>
-      <button class="tab" type="button" data-tab="rank">Bảng Xếp Hạng</button>
-    </nav>
+	    <nav class="tabs">
+	      <button class="tab active" type="button" data-tab="home">Game Hot</button>
+	      <button class="tab" type="button" data-tab="h5">Cổng game H5</button>
+	      <button class="tab" type="button" data-tab="trade">Thương Mại</button>
+	      <button class="tab" type="button" data-tab="rank">Bảng Xếp Hạng</button>
+	    </nav>
+
+	      <section class="agent-view" id="agentView" aria-hidden="true">
+	        <div class="agent-card">
+	          <div class="agent-head">
+	            <div class="agent-title">Đại lý</div>
+	            <button class="agent-home" type="button" data-agent-home aria-label="Trang chủ" title="Trang chủ">
+	              <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+	                <use href="#icon-home" />
+	              </svg>
+	            </button>
+	          </div>
+	          <div class="agent-list" id="agentList">
+	            <div class="loading">Đang tải dữ liệu...</div>
+	          </div>
+	        </div>
+	      </section>
+
+	      <section class="store-view" id="storeView" aria-hidden="true">
+	        <div class="store-card">
+	          <div class="store-head">
+	            <div class="store-title">Cửa hàng</div>
+	            <button class="store-home" type="button" data-store-home aria-label="Trang chủ" title="Trang chủ">
+	              <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+	                <use href="#icon-home" />
+	              </svg>
+	            </button>
+	          </div>
+	          <div class="store-grid" id="storeGrid">
+	            <div class="loading">Đang tải dữ liệu...</div>
+	          </div>
+	        </div>
+	      </section>
 
       <section class="checkin-view" id="checkinView" aria-hidden="true">
         <div class="checkin-card">
