--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,15 @@
         <line x1="4" y1="12" x2="20" y2="12" />
         <line x1="4" y1="18" x2="20" y2="18" />
       </symbol>
+      <symbol id="icon-box" viewBox="0 0 24 24">
+        <path d="M21 8l-9 5-9-5" />
+        <path d="M3 8l9-5 9 5v10l-9 5-9-5z" />
+        <path d="M12 13v8" />
+      </symbol>
+      <symbol id="icon-crown" viewBox="0 0 24 24">
+        <path d="M3 7l4 4 5-6 5 6 4-4v10H3z" />
+        <path d="M5 21h14" />
+      </symbol>
     </svg>
 
     <div class="page">
@@ -85,6 +94,23 @@
               <use href="#icon-search" />
             </svg>
           </button>
+        </div>
+        <div class="user-wrap" aria-label="Tài khoản">
+          <button class="pro5-btn" id="pro5Btn" type="button" aria-label="Pro5">
+            <span class="pro5-icon" aria-hidden="true">
+              <svg class="lucide" viewBox="0 0 24 24">
+                <use href="#icon-user" />
+              </svg>
+            </span>
+            <span class="pro5-text">
+              <span class="pro5-label">pro5</span>
+              <span class="pro5-name" id="pro5Name">Anh Quân</span>
+            </span>
+          </button>
+          <div class="balance-pill" aria-label="Số dư">
+            <span class="balance-value" id="balanceValue">10.000</span>
+            <span class="balance-unit">tiên ngọc</span>
+          </div>
         </div>
         <div class="menu-wrap">
           <button
@@ -218,6 +244,109 @@
 	          </div>
 	        </div>
 	      </section>
+
+        <section class="profile-view" id="profileView" aria-hidden="true">
+          <div class="profile-card">
+            <div class="profile-head">
+              <div class="profile-title">Trang cá nhân</div>
+              <div class="profile-head-actions">
+                <button
+                  class="profile-home"
+                  type="button"
+                  data-profile-home
+                  aria-label="Trang chủ"
+                  title="Trang chủ"
+                >
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-home" />
+                  </svg>
+                </button>
+                <button class="profile-close" type="button" aria-label="Đóng">
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-x" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <section class="profile-frame" id="profileFrame">
+              <div class="loading">Đang tải dữ liệu...</div>
+            </section>
+
+            <section class="profile-games">
+              <div class="profile-games-head">
+                <div class="profile-games-title">Game đã chơi</div>
+                <button class="kho-btn" type="button" data-kho aria-label="Kho" title="Kho">
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-box" />
+                  </svg>
+                </button>
+              </div>
+              <div class="profile-games-grid" id="profileGamesGrid">
+                <div class="loading">Đang tải dữ liệu...</div>
+              </div>
+            </section>
+          </div>
+        </section>
+
+        <section class="inventory-view" id="inventoryView" aria-hidden="true">
+          <div class="inventory-card">
+            <div class="inventory-head">
+              <div class="inventory-title">Kho</div>
+              <div class="inventory-head-actions">
+                <button
+                  class="inventory-home"
+                  type="button"
+                  data-inventory-home
+                  aria-label="Trang cá nhân"
+                  title="Trang cá nhân"
+                >
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-user" />
+                  </svg>
+                </button>
+                <button class="inventory-close" type="button" aria-label="Đóng">
+                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+                    <use href="#icon-x" />
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <nav class="inventory-tabs" aria-label="Tab kho">
+              <button class="inventory-tab active" type="button" data-inv-tab="avatar">
+                <span class="inventory-tab-icon" aria-hidden="true">
+                  <svg class="lucide" viewBox="0 0 24 24">
+                    <use href="#icon-user" />
+                  </svg>
+                </span>
+                Avatar
+              </button>
+              <button class="inventory-tab" type="button" data-inv-tab="title">
+                <span class="inventory-tab-icon" aria-hidden="true">
+                  <svg class="lucide" viewBox="0 0 24 24">
+                    <use href="#icon-star" />
+                  </svg>
+                </span>
+                Danh hiệu
+              </button>
+              <button class="inventory-tab" type="button" data-inv-tab="icon">
+                <span class="inventory-tab-icon" aria-hidden="true">
+                  <svg class="lucide" viewBox="0 0 24 24">
+                    <use href="#icon-box" />
+                  </svg>
+                </span>
+                Icon
+              </button>
+            </nav>
+
+            <section class="inventory-panel" id="inventoryPanel">
+              <div class="inventory-grid" id="inventoryGrid">
+                <div class="loading">Đang tải dữ liệu...</div>
+              </div>
+            </section>
+          </div>
+        </section>
 
       <section class="checkin-view" id="checkinView" aria-hidden="true">
         <div class="checkin-card">
