--- a/public/rank.html
+++ b/public/rank.html
@@ -24,6 +24,21 @@
           d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 22 12 18.56 5.82 22 7 14.14 2 9.27l6.91-1.01L12 2z"
         />
       </symbol>
+      <symbol id="icon-user" viewBox="0 0 24 24">
+        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
+        <circle cx="12" cy="7" r="4" />
+      </symbol>
+      <symbol id="icon-shopping-cart" viewBox="0 0 24 24">
+        <circle cx="9" cy="21" r="1" />
+        <circle cx="20" cy="21" r="1" />
+        <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6" />
+      </symbol>
+      <symbol id="icon-list-checks" viewBox="0 0 24 24">
+        <path d="M3 7l2 2 4-4" />
+        <path d="M3 17l2 2 4-4" />
+        <line x1="11" y1="7" x2="21" y2="7" />
+        <line x1="11" y1="17" x2="21" y2="17" />
+      </symbol>
     </svg>
 
     <div class="page">
@@ -68,6 +83,50 @@
       </section>
     </div>
 
+    <nav class="bottom-nav">
+      <button type="button" class="nav-item" data-nav="agent">
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-user"></use>
+          </svg>
+        </span>
+        Đại Lý
+      </button>
+      <button type="button" class="nav-item active" data-nav="rank">
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-star"></use>
+          </svg>
+        </span>
+        Xếp Hạng
+      </button>
+      <button type="button" class="nav-item" data-nav="home">
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-home"></use>
+          </svg>
+        </span>
+        Home
+      </button>
+      <button type="button" class="nav-item" data-nav="store">
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-shopping-cart"></use>
+          </svg>
+        </span>
+        Cửa hàng
+      </button>
+      <button type="button" class="nav-item" data-nav="task">
+        <span class="nav-icon" aria-hidden="true">
+          <svg class="lucide" viewBox="0 0 24 24">
+            <use href="#icon-list-checks"></use>
+          </svg>
+        </span>
+        Nhiệm vụ
+      </button>
+    </nav>
+
+    <script src="/bottom-nav.js"></script>
     <script src="/rank.js"></script>
   </body>
 </html>
