--- a/public/index.html
+++ b/public/index.html
@@ -320,14 +320,15 @@
             </section>
 
             <section class="profile-games">
-              <div class="profile-games-head">
-                <div class="profile-games-title">Game đã chơi</div>
-                <button class="kho-btn" type="button" data-kho aria-label="Kho" title="Kho">
-                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
-                    <use href="#icon-box" />
-                  </svg>
-                </button>
-              </div>
+	              <div class="profile-games-head">
+	                <div class="profile-games-title">Game đã chơi</div>
+	                <button class="kho-btn" type="button" data-kho aria-label="Kho" title="Kho">
+	                  <svg class="lucide" viewBox="0 0 24 24" aria-hidden="true">
+	                    <use href="#icon-box" />
+	                  </svg>
+	                  <span class="kho-label">Kho</span>
+	                </button>
+	              </div>
               <div class="profile-games-grid" id="profileGamesGrid">
                 <div class="loading">Đang tải dữ liệu...</div>
               </div>
