--- a/public/tasks.html
+++ b/public/tasks.html
@@ -6,7 +6,7 @@
     <title>Nhiệm vụ</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body class="tasks-body">
+  <body class="tasks-body tet-theme">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none" aria-hidden="true">
       <symbol id="icon-user" viewBox="0 0 24 24">
         <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
@@ -153,6 +153,7 @@
       </button>
     </nav>
 
+    <script src="/tet-theme.js"></script>
     <script src="/bottom-nav.js"></script>
     <script src="/tasks.js"></script>
   </body>
