--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Cổng Mê Game</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body class="tet-theme">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none" aria-hidden="true">
       <symbol id="icon-search" viewBox="0 0 24 24">
         <circle cx="11" cy="11" r="8" />
@@ -536,6 +536,7 @@
       </button>
     </nav>
 
+    <script src="/tet-theme.js"></script>
     <script src="/app.js"></script>
   </body>
 </html>
